# scraping_sql_testwork

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  scrapy.cfg
alembic/: env.py
alembic/versions/: 2023_06_30_1924-9202e16aa7c7_.py  2023_07_03_1616-989512151e7f_.py  2023_07_04_1955-05b507d34843_.py
src/: scrapy.cfg
src/core/: base.py  database.py  settings.py
src/crud/: auction.py  auction_holder.py  base.py  holder.py  region.py
src/locators/: auction.py  base.py
src/models/: __init__.py  auction.py  auction_holder.py  holder.py  region.py  status.py
src/nedradv/: items.py  middlewares.py  pipelines.py  settings.py
src/nedradv/spiders/: auctions.py
src/schemas/: auction.py  holder.py  region.py
src/utils/: app_types.py  operator.py  re_patterns.py
src/utils/app_exceptions/: crud.py
tests/: conftest.py  test_auction_spider.py  test_locators.py
