[tool.poetry]
name = "scraping-sql-testwork"
version = "0.1.0"
description = ""
authors = ["vaniamaksimov <vaniamaksimov@gmail.com>"]
readme = "README.md"
packages = [{include = "scraping_sql_testwork"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
pydantic = {extras = ["dotenv"], version = "^1.10.10"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
pytest = "^7.4.0"
docker = "^6.1.3"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-xdist = {extras = ["psutil"], version = "^3.3.1"}
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore:DeprecationWarning",]
norecursedirs = [".venv",]
python_files = ["test_*.py",]
python_functions = ["test_*",]
pythonpath = [".", "src"]
addopts = ["-vv", "-p", "no:cacheprovider", "--tb=long"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = "True"
markers = [
    "test_case: Тесты по описанным тест кейсам, в случае провала теста все последующие тесты в классе получат марку xfail с названием упавшего теста",
    "unit: Unit тест отдельной функции",
]

[tool.ruff]
fix = true
src = ["tests"]
select = ["E", "F", "I"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".vscode",
]
per-file-ignores = {}
line-length = 90
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 90
skip-string-normalization = true

[tool.ruff.isort]
known-first-party = ["src", "tests"]
